systeroid-tui/tests/snapshots/integration_test__about.snap
---
source: systeroid-tui/tests/integration_test.rs
expression: terminal.backend()
snapshot_kind: text
---
"╭Parameters──────────────────────|all|─╮"
"│user.name                   system    ↑"
"│kernel.fictional.test_param 0         █"
"│vm.stat_i╭──────About───────╮         █"
"│         │   ⠀ _    __/_ _  │         █"
"│         ╰──────────────────╯         █"
"│         ╭───Key Bindings───╮         █"
"│         ╰──────────────────╯         ║"
"│                                  1/3 ↓"
"╰──────────────────────────────────────╯"
