systeroid-tui/tests/snapshots/integration_test__copy_not_enabled.snap
---
source: systeroid-tui/tests/integration_test.rs
expression: terminal.backend()
snapshot_kind: text
---
"╭Parameters──────────────────────|all|─╮"
"│user.name                   system    ↑"
"│kernel.fictional.test_param 0         █"
"│vm.stat_interval            1         █"
"│                                      ║"
"│                                      ↓"
"╰──────────────────────────────────────╯"
"╭──────────────────────────────────────╮"
"│MSG: Clipboard support is not enab1/3 │"
"╰──────────────────────────────────────╯"
