systeroid-tui/tests/snapshots/integration_test__documentation.snap
---
source: systeroid-tui/tests/integration_test.rs
expression: terminal.backend()
---
"╭Parameters──|all|─╮╭──Documentation───╮"
"│kernel.fictional. ││This is a         │"
"│vm.stat_interval  ││fictional         │"
"│                  ││parameter for     │"
"│                  ││testing           │"
"│                  ││-                 │"
"│                  ││Parameter:        │"
"│                  ││kernel.fictional.t│"
"│              1/2 ││est_param         │"
"╰──────────────────╯╰──────────────────╯"
