systeroid-tui/tests/snapshots/integration_test__list.snap
---
source: systeroid-tui/tests/integration_test.rs
expression: terminal.backend()
snapshot_kind: text
---
"╭Parameters─────────────────────|user|─╮"
"│user.name system                      ↑"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                      █"
"│                                  1/1 ↓"
"╰──────────────────────────────────────╯"
