systeroid-tui/tests/snapshots/integration_test__set.snap
---
source: systeroid-tui/tests/integration_test.rs
expression: terminal.backend()
snapshot_kind: text
---
"╭Parameters──────────────────────|all|─╮"
"│user.name                   system    ↑"
"│kernel.fictional.test_param 0         █"
"│vm.stat_interval            1         █"
"│                                      ║"
"│                                      ↓"
"╰──────────────────────────────────────╯"
"╭──────────────────────────────────────╮"
"│:set user.name system             1/3 │"
"╰──────────────────────────────────────╯"
